fix: solve some Intellij Idea issues